--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "next": "^12.2.5",
     "react": "^18.2.0",
