--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
+    "highlight.js": "^11.6.0",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
