--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.6.9",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "express": "^4.18.2",
     "graphql": "^16.5.0",
     "highlight.js": "^11.6.0",
     "next": "^12.2.5",
