--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ NODE_ENV=development
 HOST=http://localhost:3000
 API_HOST=http://localhost:5000
 
-PROD_HOST=https://prog-solver
-PROD_API_HOST=https://prog-solver
+PROD_HOST=https://prog-solver.online
+PROD_API_HOST=https://prog-solver.online
