--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ NODE_ENV=production
 HOST=http://localhost:3000
 API_HOST=http://localhost:5000
 
-PROD_HOST=https://prog-solver.online
-PROD_API_HOST=https://prog-solver.online
+PROD_HOST=https://progsolver.com
+PROD_API_HOST=https://progsolver.com
