--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -18,6 +19,7 @@
     "graphql": "^16.5.0",
     "highlight.js": "^11.6.0",
     "next": "^12.2.5",
+    "next-sitemap": "^3.1.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.5"
