--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-sitemap": "^3.1.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
